--- a/src/job.yml
+++ b/src/job.yml
@@ -1,15 +1,12 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
-code: model
-command: >-
-  python 
-  --
-  --
+code: ./model
+command: >
+  python train.py --training_data ${{inputs.training_data}} --reg_rate 0.01
 inputs:
   training_data: 
-    type: uri_folder 
-    path: 
-  reg_rate: 0.01
+    type: uri_folder
+    path: azureml:diabetes-dev-folder:1
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: 
-experiment_name: 
-description: 
+compute: azureml:ruthvikmannem
+experiment_name: diabetes-dev
+description: "Training a logistic regression model with MLflow autologging"
