--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -6,14 +6,26 @@ on:
 jobs:
   train:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Check out repo
-      uses: actions/checkout@main
-    - name: Install az ml extension
-      run: az extension add -n ml -y
-    - name: Azure login
-      uses: azure/login@v1
-      with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
+      - name: Check out repo
+        uses: actions/checkout@v2
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
 
+      - name: Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+          az extension add -n ml
+
+      - name: Azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Submit Azure ML Job
+        run: |
+          az ml job create --file src/job.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace
