--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Check out repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -18,7 +18,6 @@ jobs:
 
       - name: Install Azure CLI
         run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
           az extension add -n ml -y
 
       - name: Azure login
@@ -28,4 +27,4 @@ jobs:
 
       - name: Submit Azure ML Job
         run: |
-          az ml job create --file src/job.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace
+          az ml job create --file src/job.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace --debug
