--- a/src/job.yml
+++ b/src/job.yml
@@ -7,6 +7,6 @@ inputs:
     type: uri_folder
     path: azureml:diabetes-dev-folder:1
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: azureml:ruthvikmannem
+compute: azureml:my-compute-cluster
 experiment_name: diabetes-dev
 description: "Training a logistic regression model with MLflow autologging"
