--- a/.github/workflows/04-code-checks.yml
+++ b/.github/workflows/04-code-checks.yml
@@ -1,15 +1,17 @@
 name: Code checks
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  job1:
-    name: linting
+  linting:
+    name: Linting
     runs-on: ubuntu-latest
     steps:
     - name: Check out repo
-      uses: actions/checkout@main
+      uses: actions/checkout@v2
     - name: Use Python version 3.8
       uses: actions/setup-python@v3
       with:
@@ -18,7 +20,22 @@ jobs:
       run: |
         python -m pip install flake8
     - name: Run linting tests
-      run: | 
+      run: |
         flake8 src/model/
 
-
+  testing:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out repo
+      uses: actions/checkout@v2
+    - name: Use Python version 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.8'
+    - name: Install dependencies
+      run: |
+        python -m pip install pytest
+    - name: Run unit tests
+      run: |
+        pytest tests/
