--- a/.github/workflows/04-code-checks.yml
+++ b/.github/workflows/04-code-checks.yml
@@ -10,32 +10,36 @@ jobs:
     name: Linting
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v2
-    - name: Use Python version 3.8
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: Install Flake8
-      run: |
-        python -m pip install flake8
-    - name: Run linting tests
-      run: |
-        flake8 src/model/
+      - name: Check out repo
+        uses: actions/checkout@v2
+      - name: Use Python version 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+      - name: Run linting tests
+        run: | 
+          flake8 src/model/
 
-  testing:
+  unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
+    needs: linting
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v2
-    - name: Use Python version 3.8
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install pytest
-    - name: Run unit tests
-      run: |
-        pytest tests/
+      - name: Check out repo
+        uses: actions/checkout@v2
+      - name: Use Python version 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+      - name: Run unit tests
+        run: | 
+          pytest tests/
