--- a/.github/workflows/train-model.yml
+++ b/.github/workflows/train-model.yml
@@ -1,4 +1,4 @@
-name: Train Model
+name: Register and Deploy Model
 
 on:
   push:
@@ -6,61 +6,68 @@ on:
       - main
 
 jobs:
-  experiment:
-    name: Train Model in Development
+  register-model:
     runs-on: ubuntu-latest
-    environment: development
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
-
-      - name: Log in to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run experiment job
-        run: |
-          az ml job create --file src/job.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace --experiment-name diabetes-dev
-
-  production:
-    name: Train Model in Production
-    runs-on: ubuntu-latest
-    environment:
-      name: production
-      url: ${{ steps.create_url.outputs.url }}
-    needs: experiment
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v2
-
-      - name: Log in to Azure
+      - name: Azure login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Register Model
+        run: |
+          az ml model register --name diabetes_model --path "outputs/model" --resource-group my-ml-resource-group --workspace-name my-ml-workspace
 
+  deploy-model:
+    runs-on: ubuntu-latest
+    needs: register-model
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run production job
+      - name: Azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Deploy Model
         run: |
-          az ml job create --file src/job.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace --experiment-name diabetes-prod
-        env:
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          az ml online-endpoint create --name diabetes-endpoint --file endpoint.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace
+          az ml online-deployment create --name blue --endpoint diabetes-endpoint --model diabetes_model:1 --file deployment.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace
+
+  test-endpoint:
+    runs-on: ubuntu-latest
+    needs: deploy-model
+    steps:
+      - name: Test Endpoint
+        run: |
+          RESPONSE=$(curl -X POST https://<your-endpoint-url>/score \
+          -H 'Content-Type: application/json' \
+          -d '{
+                "data": [
+                  {
+                    "Pregnancies": 9,
+                    "PlasmaGlucose": 104,
+                    "DiastolicBloodPressure": 51,
+                    "TricepsThickness": 7,
+                    "SerumInsulin": 24,
+                    "BMI": 27.36983156,
+                    "DiabetesPedigree": 1.350472047,
+                    "Age": 43
+                  }
+                ]
+              }')
+          echo "Response: $RESPONSE"
