--- a/.github/workflows/register-deploy.yml
+++ b/.github/workflows/register-deploy.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+      - name: Install Azure ML CLI extension
+        run: |
+          az extension add -n ml -y
       - name: Azure login
         uses: azure/login@v1
         with:
@@ -39,6 +42,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+      - name: Install Azure ML CLI extension
+        run: |
+          az extension add -n ml -y
       - name: Azure login
         uses: azure/login@v1
         with:
