--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,7 +6,7 @@ model:
   version: 1
 environment: azureml:<your-environment-name>@latest
 code_configuration:
-  code: src
+  code: src/model
   scoring_script: score.py
 instance_type: Standard_DS2_v2
 instance_count: 1
