--- a/.github/workflows/register-deploy.yml
+++ b/.github/workflows/register-deploy.yml
@@ -6,28 +6,53 @@ on:
       - main
 
 jobs:
-  register-model:
+  train-model:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-      - name: Install Azure ML CLI extension
+          python -m pip install -r requirements.txt
+
+      - name: Run Training Script
+        run: |
+          python src/train.py
+
+  register-model:
+    runs-on: ubuntu-latest
+    needs: train-model
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -r requirements.txt
+
+      - name: Install Azure CLI ML extension
         run: |
           az extension add -n ml -y
+
       - name: Azure login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Register Model
         run: |
-          az ml model create --name diabetes_model --path "outputs/model" --resource-group my-ml-resource-group --workspace-name my-ml-workspace
+          az ml model create --name azureml_quirky_card_4wsv0mt3v2_output_mlflow_log_model_1400287630 --path "outputs/model" --resource-group my-ml-resource-group --workspace-name my-ml-workspace
 
   deploy-model:
     runs-on: ubuntu-latest
@@ -35,24 +60,32 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-      - name: Install Azure ML CLI extension
+          python -m pip install -r requirements.txt
+
+      - name: Install Azure CLI ML extension
         run: |
           az extension add -n ml -y
+
       - name: Azure login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Deploy Model
+
+      - name: Deploy Endpoint
         run: |
           az ml online-endpoint create --name diabetes-endpoint --file endpoint.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace
-          az ml online-deployment create --name blue --endpoint diabetes-endpoint --model diabetes_model:1 --file deployment.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace
+
+      - name: Deploy Model
+        run: |
+          az ml online-deployment create --name blue --endpoint diabetes-endpoint --model azureml_quirky_card_4wsv0mt3v2_output_mlflow_log_model_1400287630:1 --file deployment.yml --resource-group my-ml-resource-group --workspace-name my-ml-workspace
 
   test-endpoint:
     runs-on: ubuntu-latest
